Виокремлює компоненту logo з коду

--- a/portfolio.html
+++ b/portfolio.html
@@ -207,7 +207,7 @@
         <footer class="footer">
             <div class="container">
                 <div class="footer-info">
-                    <a  class="logo link" href="./" aria-label="Логотип сайта Веб Студио"><span class="logo-first">Web</span><span class="logo-second-dark">Studio</span></a>
+                    <a  class="logo link" href="./" aria-label="Логотип сайта Веб Студио"><span class="logo-first">Web</span><span class="logo-second dark">Studio</span></a>
                     <address  class="address">
                         <ul class="addres-list-footer list">
                             <li class="addres-list-item"><a class="address-footer-link location link" href="https://goo.gl/maps/J2ixgFmDZ8d1wvZj8">г. Киев, пр-т Леси Украинки, 26</a></li>
