--- a/index.html
+++ b/index.html
@@ -364,14 +364,14 @@
                         </label>
                         <input id="user-policy" type="checkbox" name="client-policy" value="accept-policy" class="modal-form-policy visually-hidden">
                         <label for="user-policy" class="modal-form-policy-text">Соглашаюсь с рассылкой и принимаю <a href="#" class="modal-form-policy-link">Условия договора</a></label>
-                        <button type="submit" class="modal-form-button">Отправить</button>
+                        <button type="submit" class="modal-form-button button">Отправить</button>
                     </form>
                 </div>
             </div>
         <footer class="footer">
             <div class="container">
                 <div class="footer-info">
-                    <a  class="logo link" href="./" aria-label="Логотип сайта Веб Студио"><span class="logo-first">Web</span><span class="logo-second-dark">Studio</span></a>
+                    <a  class="logo link" href="./" aria-label="Логотип сайта Веб Студио"><span class="logo-first">Web</span><span class="logo-second dark">Studio</span></a>
                     <address  class="address">
                         <ul class="addres-list-footer list">
                             <li class="addres-list-item"><a class="address-footer-link location link" href="https://goo.gl/maps/J2ixgFmDZ8d1wvZj8">г. Киев, пр-т Леси Украинки, 26</a></li>
