Виокремлює компоненту button з коду CSS

--- a/portfolio.html
+++ b/portfolio.html
@@ -255,9 +255,9 @@
                     <label class="subscription-form-field">
                         <input type="email" name="client-mail" class="subscription-form-input" placeholder="E-mail">
                     </label>
-                    <button type="submit" class="subscription-form-button">
+                    <button type="submit" class="subscription-form-button button">
                         Подписаться
-                        <svg class="sibscription-form-button-icon">
+                        <svg class="subscription-form-icon icon">
                             <use href="./images/sprite.svg#icon-form-send"></use>
                         </svg>
                     </button>
