--- a/portfolio.html
+++ b/portfolio.html
@@ -47,11 +47,11 @@
                 <div class="container">
                     <h1 class="visually-hidden">Наши работы</h1>
                     <div class="portfolio-nav">
-                        <button class="portfolio-button button" type="button">Все</button>
-                        <button class="portfolio-button button" type="button">Веб-сайты</button>
-                        <button class="portfolio-button button" type="button">Приложения</button>
-                        <button class="portfolio-button button" type="button">Дизайн</button>
-                        <button class="portfolio-button button" type="button">Маркетинг</button>               
+                        <button class="portfolio-button" type="button">Все</button>
+                        <button class="portfolio-button" type="button">Веб-сайты</button>
+                        <button class="portfolio-button" type="button">Приложения</button>
+                        <button class="portfolio-button" type="button">Дизайн</button>
+                        <button class="portfolio-button" type="button">Маркетинг</button>               
                     </div>
                     <ul class="portfolio-list list">
                         <li class="portfolio-list-item">
